# bbb

./: .cproject  .project  CMakeLists-clang-arm.txt  CMakeLists.txt  DESIGN.md  Dockerfile.cross-armhf-clang  Dockerfile.cross-armhf-gnu  Dockerfile.intel-clang  Dockerfile.intel-gnu  PLAN.md  README.md  alljoyn-build  alljoyn-notes  build  build-deps  clang-analyzer-intel-toolchain.cmake  clang-arm-overrides.txt  clang-arm-toolchain.cmake  clang-intel-toolchain.cmake  git-dependencies.sh  gnu-arm-toolchain.cmake  gnu-intel-toolchain.cmake  infludb-build  influxdb-build  install.sh  libattr-build  libcap-build  libcurl-build  openssl-build  setup-docker.sh  toolchain-bbb.cmake
configuration/bbb/: format_flash
configuration/etc/: rc.local  rsyslog.conf
configuration/etc/logrotate.d/: bbb
configuration/influxdb/: influxdb.conf
home/: devices.ini  getWiFiUp.txt
src/: CMakeLists.txt  bbb.cpp
src/common/: CMakeLists.txt  logger.cpp  logger.h
src/plugin_framework/: DESIGN.md
src/sensors/temperature/: CMakeLists.txt  ds18b20.cpp  ds18b20.h  temperature_sensor.cpp  temperature_sensor.h  temperature_sensor_manager.cpp  temperature_sensor_manager.h
src/sensors/temperature/test/: ds18b20_test.cpp
